# altimetry-processing-validation

./: README.md  pyproject.toml
src/validation/: cli.py  report.py
src/validation/analysis/: attributes.py  dimensions.py  statistics.py
src/validation/comparators/: along_track.py  base.py  simple_grid.py
tests/: conftest.py  test_along_track.py  test_attributes.py  test_cli.py  test_dimensions.py  test_simple_grid.py  test_statistics.py
